# beginner-python-mcp

./: README.md  pyproject.toml
docs/: MCP_FULL_CHAIN.md
src/beginner_python_mcp/: server.py
